[package]
name = "subwoofer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
audio-visualizer = "0.4"
buttplug = "7.1"
clap = { version = "4.4", features = ["derive"] }
cpal = "0.15"
lowpass-filter = "0.3"
spectrum-analyzer = "1.5"
tokio = { version = "1.34", features = ["full"] }
