[package]
name = "subwoofer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
audio-visualizer = "0.5"
buttplug = "10.0"
clap = { version = "4.6", features = ["derive"] }
cpal = "0.15"
lowpass-filter = "0.4"
spectrum-analyzer = "1.7"
tokio = { version = "1.51", features = ["full"] }
